logs/dag_id=ETL/run_id=manual__2023-10-22T13:16:03.221155+00:00/task_id=Upload_Data/attempt=1.log
[2023-10-22T13:16:04.584+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: ETL.Upload_Data manual__2023-10-22T13:16:03.221155+00:00 [queued]>
[2023-10-22T13:16:04.593+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: ETL.Upload_Data manual__2023-10-22T13:16:03.221155+00:00 [queued]>
[2023-10-22T13:16:04.593+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2023-10-22T13:16:04.607+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): Upload_Data> on 2023-10-22 13:16:03.221155+00:00
[2023-10-22T13:16:04.616+0000] {standard_task_runner.py:57} INFO - Started process 1356 to run task
[2023-10-22T13:16:04.619+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'ETL', 'Upload_Data', 'manual__2023-10-22T13:16:03.221155+00:00', '--job-id', '26', '--raw', '--subdir', 'DAGS_FOLDER/first_dags.py', '--cfg-path', '/tmp/tmpw1g4qp28']
[2023-10-22T13:16:04.621+0000] {standard_task_runner.py:85} INFO - Job 26: Subtask Upload_Data
[2023-10-22T13:16:04.668+0000] {task_command.py:416} INFO - Running <TaskInstance: ETL.Upload_Data manual__2023-10-22T13:16:03.221155+00:00 [running]> on host 460880db6b82
[2023-10-22T13:16:04.758+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='me' AIRFLOW_CTX_DAG_ID='ETL' AIRFLOW_CTX_TASK_ID='Upload_Data' AIRFLOW_CTX_EXECUTION_DATE='2023-10-22T13:16:03.221155+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-10-22T13:16:03.221155+00:00'
[2023-10-22T13:16:04.760+0000] {sql.py:274} INFO - Executing: 

        CREATE TABLE scrap (
            harga TEXT,
            alamat TEXT,
            fasilitas TEXT,
            Carport TEXT,
            Dapur TEXT,
            Daya Listrik TEXT,
            Garasi TEXT,
            Hadap TEXT,
            Hook TEXT,
            ID Iklan TEXT,
            Jumlah Lantai TEXT,
            Kamar Mandi TEXT,
            Kamar Mandi Pembantu TEXT,
            Kamar Pembantu TEXT,
            Kamar Tidur TEXT,
            Kondisi Perabotan TEXT,
            Kondisi Properti TEXT,
            Konsep dan Gaya Rumah TEXT,
            Lebar Jalan TEXT,
            Luas Bangunan TEXT,
            Luas Tanah TEXT,
            Material Bangunan TEXT,
            Material Lantai TEXT,
            Pemandangan TEXT,
            Ruang Makan TEXT,
            Ruang Tamu TEXT,
            Sertifikat TEXT,
            Sumber Air TEXT,
            Tahun di Renovasi TEXT,
            Tahun Dibangun TEXT,
            Terjangkau Internet TEXT,
            Tipe Properti TEXT
        );

        
[2023-10-22T13:16:04.769+0000] {base.py:73} INFO - Using connection ID 'postgres_docker' for task execution.
[2023-10-22T13:16:04.780+0000] {base.py:73} INFO - Using connection ID 'postgres_docker' for task execution.
[2023-10-22T13:16:04.794+0000] {sql.py:418} INFO - Running statement: 

        CREATE TABLE scrap (
            harga TEXT,
            alamat TEXT,
            fasilitas TEXT,
            Carport TEXT,
            Dapur TEXT,
            Daya Listrik TEXT,
            Garasi TEXT,
            Hadap TEXT,
            Hook TEXT,
            ID Iklan TEXT,
            Jumlah Lantai TEXT,
            Kamar Mandi TEXT,
            Kamar Mandi Pembantu TEXT,
            Kamar Pembantu TEXT,
            Kamar Tidur TEXT,
            Kondisi Perabotan TEXT,
            Kondisi Properti TEXT,
            Konsep dan Gaya Rumah TEXT,
            Lebar Jalan TEXT,
            Luas Bangunan TEXT,
            Luas Tanah TEXT,
            Material Bangunan TEXT,
            Material Lantai TEXT,
            Pemandangan TEXT,
            Ruang Makan TEXT,
            Ruang Tamu TEXT,
            Sertifikat TEXT,
            Sumber Air TEXT,
            Tahun di Renovasi TEXT,
            Tahun Dibangun TEXT,
            Terjangkau Internet TEXT,
            Tipe Properti TEXT
        );

        , parameters: None
[2023-10-22T13:16:04.798+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "TEXT"
LINE 9:             Daya Listrik TEXT,
                                 ^

[2023-10-22T13:16:04.806+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=ETL, task_id=Upload_Data, execution_date=20231022T131603, start_date=20231022T131604, end_date=20231022T131604
[2023-10-22T13:16:04.820+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 26 for task Upload_Data (syntax error at or near "TEXT"
LINE 9:             Daya Listrik TEXT,
                                 ^
; 1356)
[2023-10-22T13:16:04.831+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-10-22T13:16:04.849+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
